added new configs in application properties